fix: ajuste titulo da pagina

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,9 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
-    <title>Curriculum Vitae</title>
+    <title>Marcelo Nogueira</title>
   </head>
   <body>
     <div id="root"></div>
-  
   </body>
 </html>
